[package]
name = "rougelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rltk = { version = "0.8.7", features = ["serde"] }
specs = { version = "0.19", features = ["serde"] }
specs-derive = "0.4.1"
serde= { version = "^1", features = ["derive"] }
serde_json = "^1"